--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Learning Basics of NodeJs",
   "main": "index.js",
   "scripts": {
-    "start" :"nodemon ./app.js"
-   
+    "start": "nodemon ./app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,9 @@
   },
   "homepage": "https://github.com/bhargavidogra/NodeJs_Learning_path#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.15",
     "node": "^14.2.0",
     "nodemon": "^2.0.4"
   }
